--- a/index.html
+++ b/index.html
@@ -205,19 +205,19 @@
                                     <h3 class="special-select__title">معروف در منو های ما</h3>
                                 </div>
                                 <div class="special-select__categories">
-                                    <div class="special-select__category special-select__category--active center">
+                                    <div data-content-id="main-menu" class="special-select__category special-select__category--active center">
                                         <p class='special-select__name'>منوی اصلی</p>
                                         <i class="special-select__icon fa-solid fa-play" style="color: #ccccd1;"></i>
                                     </div>
-                                    <div class="special-select__category center">
+                                    <div data-content-id="appetizer" class="special-select__category center">
                                         <p class='special-select__name'>پیش خوراک</p>
                                         <i class=" special-select__icon fa-solid fa-play" style="color: #ccccd1;"></i>
                                     </div>
-                                    <div class="special-select__category center">
+                                    <div data-content-id="dessert" class="special-select__category center">
                                         <p class='special-select__name'>دسر</p>
                                         <i class=" special-select__icon fa-solid fa-play" style="color: #ccccd1;"></i>
                                     </div>
-                                    <div class="special-select__category center">
+                                    <div data-content-id="drink" class="special-select__category center">
                                         <p class='special-select__name'>نوشیدنی ها</p>
                                         <i class=" special-select__icon fa-solid fa-play" style="color: #ccccd1;"></i>
                                     </div>
@@ -425,22 +425,7 @@
                                     </li>
                                 </ul>
                                 <ul id="drink" class="special-select__menus">
-                                    <li class="special-select__menu center">
-                                        <div class="special-menu__left center">
-                                            <div class="speical-menu__image-container">
-                                                <img src="./Images/1.jpg" class="special-menu__image">
-                                            </div>
-                                            <div class="special-menu__titles">
-                                                <h3 class="special-menu__title">چلو مرغ</h3>
-                                                <p class="special-menu__description">ترکیبی از مرغ و سسس مخصوص رستوران با طمعی عالی</p>
-                                            </div>
-                                            
-                                        </div>
-                                        <div class="special-menu__right">
-                                            <p class="special-menu__price">$29</p>
-                                            <div class="special-menu__button">افزودن به سبد خرید</div>
-                                        </div>
-                                    </li>
+                    
                                     <li class="special-select__menu center">
                                         <div class="special-menu__left center">
                                             <div class="speical-menu__image-container">
