--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-static menu-static--show">
+            <div class="menu-static">
                 <div class="menu-static__wrapper">
                     <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
                     <ul class="menu-static__lists center">
@@ -212,9 +212,9 @@
                           
                         </div>
                         <div class="book-table__bottom center">
-                            <i class=" book-table__icon fas fa-chevron-right"></i>
+                            <i id="right" class="book-table__icon fas fa-chevron-right"></i>
                             <p class="book-table__number"><span class="book-table__number-1">03</span>\<span class="book-table__number-2">04</span></p>
-                            <i class=" book-table__icon fas fa-chevron-left"></i>
+                            <i id="left" class=" book-table__icon fas fa-chevron-left"></i>
                         </div>
                     </div>
                 </section>
@@ -648,5 +648,6 @@
         </div>
     </footer>
     <script src="./Js/index.js"></script>
+    <script src="./Js/slider.js"></script>
 </body>
 </html>
