--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
                             <p class="book-table__title-top">رزرو میز</p>
                             <h3 class="book-table__title">رویداد های پیش رو</h3>
                         </div>
-                        <div class="book-table__dot"><span></span></div>                      
+                        <div class="book-table__dot"><span></span></div>        
+                        <i id="right" class="book-table__icon fas fa-chevron-right"></i>              
                           <div class="book-table__main center">
                             <div class="book-table__content">
                                 <div class="book-table__border"></div>
@@ -212,15 +213,13 @@
                           
                         </div>
                         <div class="book-table__bottom center">
-                            <i id="right" class="book-table__icon fas fa-chevron-right"></i>
-                            <p class="book-table__number"><span class="book-table__number-1">03</span>\<span class="book-table__number-2">04</span></p>
                             <i id="left" class=" book-table__icon fas fa-chevron-left"></i>
                         </div>
                     </div>
                 </section>
                 <section class="special-select">
                     <div class="container">
-                        <div class="special-select__wrapper center">
+                        <div class="special-select__wrapper center">ب
                             <div class="special-select__left">
                                 <div class="special-select__titles">
                                     <p class="special-select__title-top">انتخاب ویژه</p>
