--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./Css/app.css">
     <title>گرم و سرد</title>
 </head>
@@ -519,27 +520,109 @@
                                 <h3 class="section-comment__title">نظرات</h3>
                             </div>
                             <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
-                            <div class="section-comment__main-wrapper ">
-                                <div class="section-comment__main">
-                                    <div class="section-comment__image-container">
-                                        <img src="./Images/man.jpg" class="section-comment__image">
-                                    </div>
-                                    <div class="section-comment__titles">
-                                        <h3 class="section-comment__name">مانی فنایی</h3>
-                                        <p class="section-comment__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیلورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس ک اس
-                                        </p>
-                                    </div>
-                                    <div class="section-comment__stars">
-                                        <i class="section-comment__star fa-solid fa-star"></i>
-                                        <i class="section-comment__star fa-solid fa-star"></i>
-                                        <i class="section-comment__star fa-solid fa-star"></i>
-                                        <i class="section-comment__star fa-solid fa-star"></i>
-                                        <i class="section-comment__star fa-solid fa-star"></i>
-                                        <i class="section-comment__star fa-solid fa-star"></i>
-                                    </div>
-                                    <span class="section-comment__number">01.</span>
-                                </div>  
+                            <div class="section-comment__main-wrapper center">
+                                        <div class="swiper mySwiper">
+                                            <div class="swiper-wrapper">
+                                              <div class="swiper-slide">   <div class="section-comment__main">
+                                                <div class="section-comment__image-container">
+                                                    <img src="./Images/man.jpg" class="section-comment__image">
+                                                </div>
+                                                <div class="section-comment__titles">
+                                                    <h3 class="section-comment__name">مانی فنایی</h3>
+                                                    <p class="section-comment__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیلورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس ک اس
+                                                    </p>
+                                                </div>
+                                                <div class="section-comment__stars">
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                </div>
+                                                <span class="section-comment__number">01.</span>
+                                            </div>  </div>
+                                              <div class="swiper-slide">   <div class="section-comment__main">
+                                                <div class="section-comment__image-container">
+                                                    <img src="./Images/man.jpg" class="section-comment__image">
+                                                </div>
+                                                <div class="section-comment__titles">
+                                                    <h3 class="section-comment__name">مانی فنایی</h3>
+                                                    <p class="section-comment__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیلورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس ک اس
+                                                    </p>
+                                                </div>
+                                                <div class="section-comment__stars">
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                </div>
+                                                <span class="section-comment__number">01.</span>
+                                            </div>  </div>
+                                              <div class="swiper-slide">   <div class="section-comment__main">
+                                                <div class="section-comment__image-container">
+                                                    <img src="./Images/man.jpg" class="section-comment__image">
+                                                </div>
+                                                <div class="section-comment__titles">
+                                                    <h3 class="section-comment__name">مانی فنایی</h3>
+                                                    <p class="section-comment__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیلورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس ک اس
+                                                    </p>
+                                                </div>
+                                                <div class="section-comment__stars">
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                </div>
+                                                <span class="section-comment__number">01.</span>
+                                            </div>  </div>
+                                              <div class="swiper-slide">   <div class="section-comment__main">
+                                                <div class="section-comment__image-container">
+                                                    <img src="./Images/man.jpg" class="section-comment__image">
+                                                </div>
+                                                <div class="section-comment__titles">
+                                                    <h3 class="section-comment__name">مانی فنایی</h3>
+                                                    <p class="section-comment__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیلورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس ک اس
+                                                    </p>
+                                                </div>
+                                                <div class="section-comment__stars">
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                </div>
+                                                <span class="section-comment__number">01.</span>
+                                            </div>  </div>
+                                              <div class="swiper-slide">   <div class="section-comment__main">
+                                                <div class="section-comment__image-container">
+                                                    <img src="./Images/man.jpg" class="section-comment__image">
+                                                </div>
+                                                <div class="section-comment__titles">
+                                                    <h3 class="section-comment__name">مانی فنایی</h3>
+                                                    <p class="section-comment__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیلورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس ک اس
+                                                    </p>
+                                                </div>
+                                                <div class="section-comment__stars">
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                                </div>
+                                                <span class="section-comment__number">01.</span>
+                                            </div>  </div>
                                 
+                                            </div>
+                                            <div class="swiper-button-next"></div>
+                                            <div class="swiper-button-prev"></div>
+                                          </div>
                             </div>
                                
                             <div class="section-comment__pagination"></div>
@@ -635,5 +718,15 @@
     </footer>
     <script src="./Js/index.js"></script>
     <script src="./Js/slider.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+          navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+          },
+        });
+      </script>
+
 </body>
 </html>
