--- a/index.html
+++ b/index.html
@@ -151,58 +151,125 @@
                             <h3 class="book-table__title">رویداد های پیش رو</h3>
                         </div>
                         <div class="book-table__dot"><span></span></div>        
-                        <i id="right" class="book-table__icon fas fa-chevron-right"></i>              
                           <div class="book-table__main center">
-                            <div class="book-table__content">
-                                <div class="book-table__border"></div>
-                                <div class="book-table__content-titles">
-                                    <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
-                                    <p class="book-table__content-title-bottom">83/1/5</p>
+                            <div class="swiper-container mySwiper1">
+                                <div class="swiper-wrapper">
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="book-table__content">
+                                        <div class="book-table__border"></div>
+                                        <div class="book-table__content-titles">
+                                            <h3 class="book-table__content-title">فستیوال خوراک بهار</h3>
+                                            <p class="book-table__content-title-bottom">83/1/5</p>
+                                        </div>
+                                        <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                        <div class="book-table__content-end"></div>
+                                    </div>
+                                  </div>
                                 </div>
-                                <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
-                                <div class="book-table__content-end"></div>
+                                <div class="swiper-button-next swiper2"></div>
+                                <div class="swiper-button-prev swiper2"></div>
+                              </div>
                             </div>
-                            <div class="book-table__content">
-                                <div class="book-table__border"></div>
-                                <div class="book-table__content-titles">
-                                    <h3 class="book-table__content-title main">فستیوال خوراک بهار</h3>
-                                    <p class="book-table__content-title-bottom">83/1/5</p>
-                                </div>
-                                <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
-                                <div class="book-table__content-end"></div>
-                            </div>
-                            <div class="book-table__content">
-                                <div class="book-table__border"></div>
-                                <div class="book-table__content-titles">
-                                    <h3 class="book-table__content-title main">فستیوال خوراک بهار</h3>
-                                    <p class="book-table__content-title-bottom">83/1/5</p>
-                                </div>
-                                <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
-                                <div class="book-table__content-end"></div>
-                            </div>
-                            <div class="book-table__content">
-                                <div class="book-table__border"></div>
-                                <div class="book-table__content-titles">
-                                    <h3 class="book-table__content-title main">فستیوال خوراک بهار</h3>
-                                    <p class="book-table__content-title-bottom">83/1/5</p>
-                                </div>
-                                <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
-                                <div class="book-table__content-end"></div>
-                            </div>
-                             <div class="book-table__content">
-                                <div class="book-table__border"></div>
-                                <div class="book-table__content-titles">
-                                    <h3 class="book-table__content-title main">فستیوال خوراک بهار</h3>
-                                    <p class="book-table__content-title-bottom">83/1/5</p>
-                                </div>
-                                <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
-                                <div class="book-table__content-end"></div>
-                            </div>
-                          
-                        </div>
-                        <div class="book-table__bottom center">
-                            <i id="left" class=" book-table__icon fas fa-chevron-left"></i>
-                        </div>
+                     
                     </div>
                 </section>
                 <section class="special-select">
@@ -721,12 +788,29 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".mySwiper", {
+            loop: true,
           navigation: {
             nextEl: ".swiper-button-next",
             prevEl: ".swiper-button-prev",
           },
         });
       </script>
-
+       <script>
+        var swiper = new Swiper(".mySwiper1", {
+          slidesPerView: 1,
+          spaceBetween: 30,
+          slidesPerGroup: 1,
+          loop: true,
+          loopFillGroupWithBlank: true,
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          },
+          navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+          },
+        });
+      </script>
 </body>
 </html>
